# thumbp

./: .gitignore  .iex.exs  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  checksum-Elixir.Thumbp.exs  mix.exs
.github/workflows/: release.yml
benchmark/: benchmark.exs
lib/: thumbp.ex
native/thumbp/: Cargo.toml  Cross.toml
native/thumbp/.cargo/: config.toml
native/thumbp/src/: lib.rs
test/: thumbp_test.exs
