[package]
name = "thumbp"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "thumbp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
image = "0.25"
libwebp-sys = "0.9"
rustler = "0.35"
webp = "0.3"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = "debuginfo"
