[package]
name = "thumbp"
version = "0.2.0"
authors = []
edition = "2021"

[lib]
name = "thumbp"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
image = "0.25"
jpeg-decoder = "0.3"
libwebp-sys = "0.9"
rustler = { version = "0.37", default-features = false }
webp = "0.3"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = "debuginfo"
